--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,31 @@
-.App {
-  text-align: center;
+.icon-left{
+  position: absolute;
+  top:10px;
+  left:10px;
+}
+.icon-right{
+  position: absolute;
+  bottom:10px;
+  right:10px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.season-display{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  height: 100vh;
+}
+.season-display.winter i{
+  color:blue;
 }
 
-.App-link {
-  color: #61dafb;
+.season-display.summer i{
+  color:red;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.winter{
+  background:aliceblue;
+}
+.summer{
+  background:orange;
 }
